# sprawl-index

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
data/processed/: city_centers.csv
data/raw/countries/: countries.shp  countries.shx
modules/: index_computation.py  utils.py
